--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Bukable</title>
+    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
   </head>
   <body>
     <div id="root"></div>
